# excel_split

./: README.md
.history/split/split/: split_20230912115621.py
split/: pyproject.toml
split/CSV/: example1.csv  example2.csv  example3.csv
split/excel_in/: example_merged.xlsx
split/split/: split.py  utils.py
split/split/src/: split.py  utils.py
